# emul

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: linting.yml
src/emul/: __init__.py  covariance_functions.py  mean_functions.py  models.py  types.py
